# Xenon

./: Cargo.toml
examples/: wgpu.rs
src/: colors.rs  input.rs  lib.rs  path.rs  rendering.rs  vectors.rs  widgets.rs  window.rs
src/rendering/: wgpu.rs
src/rendering/wgpu/: colored.wgsl
